# statistics-collector

./: .gitignore  Cargo.toml  README.md  privacy_policy.html
doc/: changelog.md
sql/: setup.pgsql
src/: dto.rs  main.rs
