[package]
name = "statistics-collector"
version = "1.0.1"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.23.1", features = ["full"] }
warp = "~0.3.3" # uses tokio 1.0
percent-encoding = "^2.1.0"
chrono = "~0.4.0"
tokio-postgres = { version = "~0.7.0", features = ["with-chrono-0_4"] }
native-tls = "~0.2.0"
postgres-native-tls = "~0.5.0"
serde = { version = "^1.0.0", features = ["derive"] }
toml = "^0.5.0"
